added image preview line to ranger

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -615,4 +615,5 @@ copytmap <ESC> q Q w <C-c>
 # Custom bindings
 map docgg cd ~/Documents
 
-
+# adding image previews via w3m-image
+set preview_images true
