--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,7 +1,7 @@
 // vim:ft=json
 
 {
-	"layer": "top",
+	"layer": "bottom",
 	"position": "top",
 
 	"modules-left": [
@@ -59,7 +59,7 @@
 		"tooltip": false
 	},
 	"clock#2": {
-		"format": "{:%H:%M}",
+		"format": "{:%I:%M}",
 		"tooltip": false
 	},
 	"clock#3": {
