--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -23,6 +23,9 @@
 		"memory",
 		"custom/left-arrow-light",
 		"custom/left-arrow-dark",
+		"disk",
+		"custom/left-arrow-light",
+		"custom/left-arrow-dark",
 		"battery",
 		"custom/left-arrow-light",
 		"custom/left-arrow-dark",
@@ -67,13 +70,17 @@
 		"tooltip": false
 	},
 
+	"disk": {
+		"interval": 50,
+		"format": "🖴 {percentage_used}%"
+	},
 	"memory": {
 		"interval": 5,
-		"format": "Mem {}%"
+		"format": "🐏 {}%"
 	},
 	"cpu": {
 		"interval": 5,
-		"format": "CPU {usage:2}%"
+		"format": "🖥️ {usage:2}%"
 	},
 	"battery": {
 		"states": {
