--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,16 +1,30 @@
 # better splitting
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
+
+# t for a new terminal window
+bind-key t new-window
+bind C-l send-keys 'C-l'
+
 # less colourful status
-set -g status-bg colour240
+set -g status-bg black
 set -g status-fg white
+
+
 # 256 colors support
 set -g default-terminal "screen-256color"
+# setw -g window-active-style 'bg=#242934' # bg color of active pane
+
 # sane scrolling
 set -g mouse on
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+# Resurrect options
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-nvim 'session'
+
 # TMUX plugin manager (keep at the bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
