--- a/.config/sway/config
+++ b/.config/sway/config
@@ -64,6 +64,11 @@ input "2:14:ETPS/2_Elantech_Touchpad" {
    natural_scroll enabled
    middle_emulation enabled
 }
+
+input type:keyboard {
+    xkb_options caps:escape
+}
+
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
@@ -82,7 +87,7 @@ input "2:14:ETPS/2_Elantech_Touchpad" {
     bindsym $mod+m exec $menu
 
     # Start firefox
-    bindsym $mod+f exec firefox
+    bindsym $mod+b exec firefox
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
@@ -167,11 +172,11 @@ input "2:14:ETPS/2_Elantech_Touchpad" {
     # You can "split" the current object of your focus with
     # $mod+b or $mod+v, for horizontal and vertical splits
     # respectively.
-    bindsym $mod+b splith
+    bindsym $mod+s splith
     bindsym $mod+v splitv
 
     # Switch the current container between different layout styles
-    bindsym $mod+s layout stacking
+    bindsym $mod+y layout stacking
     bindsym $mod+w layout tabbed
     bindsym $mod+e layout toggle split
 
@@ -250,5 +255,6 @@ bar {
     swaybar_command waybar
 }
 #exec waybar
+exec autotiling
 
 include /etc/sway/config.d/*
