tmux conf changes grabbed from connormcd

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # better splitting
 bind | split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
+bind _ split-window -v -c "#{pane_current_path}"
 
 # t for a new terminal window
 bind-key t new-window
@@ -9,7 +9,25 @@ bind C-l send-keys 'C-l'
 # less colourful status
 set -g status-bg black
 set -g status-fg white
+set -g window-status-format "#[fg=colour248] #I #W "
+set -g window-status-current-format "#[fg=colour254,noreverse,bg=colour235] #I #W "
 
+
+
+# use vi mode
+setw -g mode-keys vi
+
+# copy mode
+bind C-y copy-mode
+bind-key p paste-buffer
+
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi r send -X rectangle-toggle
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+
+
+# bind r rotate-window -D
 
 # 256 colors support
 set -g default-terminal "screen-256color"
