--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -38,6 +38,7 @@ set -g mouse on
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 # Resurrect options
