changed tmux plugin syntax due to bug in tmux plugin manager when sourcing nondefault file

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,8 +12,6 @@ set -g status-fg white
 set -g window-status-format "#[fg=colour248] #I #W "
 set -g window-status-current-format "#[fg=colour254,noreverse,bg=colour235] #I #W "
 
-
-
 # use vi mode
 setw -g mode-keys vi
 
@@ -26,7 +24,6 @@ bind-key -T copy-mode-vi V send -X select-line
 bind-key -T copy-mode-vi r send -X rectangle-toggle
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
-
 # bind r rotate-window -D
 
 # 256 colors support
@@ -37,10 +34,18 @@ set -g default-terminal "screen-256color"
 set -g mouse on
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'christoomey/vim-tmux-navigator'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+set -g @tpm_plugins '\
+    tmux-plugins/tmux-sensible \
+    tmux-plugins/tmux-yank \
+    christoomey/vim-tmux-navigator \
+    tmux-plugins/tmux-resurrect \
+'
+
 # Resurrect options
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
