--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,6 +11,7 @@ set -g status-bg black
 set -g status-fg white
 set -g window-status-format "#[fg=colour248] #I #W "
 set -g window-status-current-format "#[fg=colour254,noreverse,bg=colour235] #I #W "
+set -g status-right '#H'
 
 # use vi mode
 setw -g mode-keys vi
