--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,7 +28,9 @@ bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -in -selection cl
 # bind r rotate-window -D
 
 # 256 colors support
+# set -g default-terminal "alacritty"
 set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 # setw -g window-active-style 'bg=#242934' # bg color of active pane
 
 # sane scrolling
