--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -11,14 +11,14 @@
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty itself.
-#env:
+# env:
   # TERM variable
   #
   # This value is used to set the `$TERM` environment variable for
   # each instance of Alacritty. If it is not present, alacritty will
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
-  #TERM: alacritty
+  # TERM: alacritty
 
 window:
   # Window dimensions (changes require restart)
@@ -132,7 +132,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: source code pro extralight
+    family: source code pro semibold
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -284,59 +284,111 @@ draw_bold_text_with_bright_colors: true
   #indexed_colors: []
 
 # The 'GNOME Dark" theme from GNOME terminal.
+# colors:
+#   primary:
+#     foreground: '#d0cfcc'
+#     background: '#171421'
+
+#   normal:
+#     black:   '#171421'
+#     red:     '#c01c28'
+#     green:   '#26a269'
+#     yellow:  '#a2734c'
+#     blue:    '#12488b'
+#     magenta: '#a347ba'
+#     cyan:    '#2aa1b3'
+#     white:   '#d0cfcc'
+
+#   bright:
+#     black:   '#5e5c64'
+#     red:     '#f66151'
+#     green:   '#33d17a'
+#     yellow:  '#e9ad0c'
+#     blue:    '#2a7bde'
+#     magenta: '#c061cb'
+#     cyan:    '#33c7de'
+#     white:   '#ffffff'
+
+# # Colors (Nord, basic custom)
+# colors:
+#    # Default colors
+#    primary:
+#      background: '#1d2129'
+#      foreground: '#D8DEE9'
+
+#    # Normal colors
+#    normal:
+#      black:   '#3B4252'
+#      red:     '#BF616A'
+#      green:   '#A3BE8C'
+#      yellow:  '#EBCB8B'
+#      blue:    '#81A1C1'
+#      magenta: '#B48EAD'
+#      cyan:    '#88C0D0'
+#      white:   '#E5E9F0'
+
+#    # Bright colors
+#    bright:
+#      black:   '#4C566A'
+#      red:     '#BF616A'
+#      green:   '#A3BE8C'
+#      yellow:  '#EBCB8B'
+#      blue:    '#81A1C1'
+#      magenta: '#B48EAD'
+#      cyan:    '#8FBCBB'
+#      white:   '#ECEFF4'
+
+
+# Colors (Nord, extended custom)
 colors:
   primary:
-    foreground: '#d0cfcc'
-    background: '#171421'
-
+    background: '#1d2129'
+    foreground: '#d8dee9'
+    dim_foreground: '#a5abb6'
+  cursor:
+    text: '#2e3440'
+    cursor: '#d8dee9'
+  vi_mode_cursor:
+    text: '#2e3440'
+    cursor: '#d8dee9'
+  selection:
+    text: CellForeground
+    background: '#4c566a'
+  search:
+    matches:
+      foreground: CellBackground
+      background: '#88c0d0'
+    bar:
+      background: '#434c5e'
+      foreground: '#d8dee9'
   normal:
-    black:   '#171421'
-    red:     '#c01c28'
-    green:   '#26a269'
-    yellow:  '#a2734c'
-    blue:    '#12488b'
-    magenta: '#a347ba'
-    cyan:    '#2aa1b3'
-    white:   '#d0cfcc'
-
+    black: '#3b4252'
+    red: '#bf616a'
+    green: '#a3be8c'
+    yellow: '#ebcb8b'
+    blue: '#81a1c1'
+    magenta: '#b48ead'
+    cyan: '#88c0d0'
+    white: '#e5e9f0'
   bright:
-    black:   '#5e5c64'
-    red:     '#f66151'
-    green:   '#33d17a'
-    yellow:  '#e9ad0c'
-    blue:    '#2a7bde'
-    magenta: '#c061cb'
-    cyan:    '#33c7de'
-    white:   '#ffffff'
+    black: '#4c566a'
+    red: '#bf616a'
+    green: '#a3be8c'
+    yellow: '#ebcb8b'
+    blue: '#81a1c1'
+    magenta: '#b48ead'
+    cyan: '#8fbcbb'
+    white: '#eceff4'
+  dim:
+    black: '#373e4d'
+    red: '#94545d'
+    green: '#809575'
+    yellow: '#b29e75'
+    blue: '#68809a'
+    magenta: '#8c738c'
+    cyan: '#6d96a5'
+    white: '#aeb3bb'
 
-# Colors (Nord)
-colors:
-   # Default colors
-   primary:
-     background: '#2E3440'
-     foreground: '#D8DEE9'
-
-   # Normal colors
-   normal:
-     black:   '#3B4252'
-     red:     '#BF616A'
-     green:   '#A3BE8C'
-     yellow:  '#EBCB8B'
-     blue:    '#81A1C1'
-     magenta: '#B48EAD'
-     cyan:    '#88C0D0'
-     white:   '#E5E9F0'
-
-   # Bright colors
-   bright:
-     black:   '#4C566A'
-     red:     '#BF616A'
-     green:   '#A3BE8C'
-     yellow:  '#EBCB8B'
-     blue:    '#81A1C1'
-     magenta: '#B48EAD'
-     cyan:    '#8FBCBB'
-     white:   '#ECEFF4'
 
 # Bell
 #
@@ -383,7 +435,7 @@ bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-# background_opacity: 0.97
+background_opacity: 0.98
 
 #selection:
   # This string contains all characters that are used as separators for
