--- a/waybar/config
+++ b/waybar/config
@@ -82,7 +82,7 @@
 
 	"disk": {
 		"interval": 100,
-		"format": "🖴 {percentage_used}%"
+		"format": "💽 {percentage_used}%"
 	},
 	"memory": {
 		"interval": 5,
@@ -90,7 +90,7 @@
 	},
 	"cpu": {
 		"interval": 5,
-		"format": "🖥️ {usage:2}%"
+		"format": "💻 {usage:2}%"
 	},
 	"battery": {
 		"states": {
@@ -100,11 +100,11 @@
 		},
 		"format": "{icon} {capacity}%",
 		"format-icons": [
-			"",
-			"",
-			"",
-			"",
-			""
+			"⚡!",
+			"!",
+			"🔋",
+			"🔋",
+			"charged"
 		]
 	},
 	"pulseaudio": {
@@ -123,7 +123,7 @@
 		"on-click-right": "pavucontrol"
 	},
 	"tray": {
-		"icon-size": 20
+		"icon-size": 9
 	}
 }
 
