--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,8 @@
+# remap prefix from 'C-b' to 'C-a'
+unbind C-b
+set-option -g prefix C-Space
+bind-key C-Space send-prefix
+
 # better splitting
 bind | split-window -h -c "#{pane_current_path}"
 bind _ split-window -v -c "#{pane_current_path}"
