--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -21,6 +21,9 @@
   # TERM: alacritty
 
 window:
+  # Window opacity as a floating point number from `0.0` to `1.0`.
+  # The value `0.0` is completely transparent and `1.0` is opaque.
+  opacity: 0.98
   # Window dimensions (changes require restart)
   #
   # Number of lines/columns (not pixels) in the terminal. The number of columns
@@ -431,11 +434,6 @@ bell:
   #
   #command: None
 
-# Background opacity
-#
-# Window opacity as a floating point number from `0.0` to `1.0`.
-# The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.98
 
 #selection:
   # This string contains all characters that are used as separators for
