--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -21,6 +21,7 @@
   # TERM: alacritty
 
 window:
+  opacity: 0.98
   # Window dimensions (changes require restart)
   #
   # Number of lines/columns (not pixels) in the terminal. The number of columns
@@ -110,7 +111,8 @@ font:
     #   - (Windows) Consolas
     #
     #family: monospace
-    family: source code pro semibold
+    # family: source code pro semibold
+    family: jetbrainsmono medium nerd font
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -119,12 +121,13 @@ font:
   bold:
     # Font family
     #
+    family: jetbrainsmono Extrabold nerd font
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: source code pro
+    # family: source code pro
 
     # The `style` can be specified to pick a specific face.
-    style: Bold
+    style: Extrabold
 
   # Italic font face
   italic:
@@ -132,7 +135,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: source code pro semibold
+    # family: source code pro semibold
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -140,10 +143,11 @@ font:
   # Bold italic font face
   bold_italic:
     # Font family
+    family: jetbrainsmono Extrabold Italic nerd font
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: monospace
+    # family: monospace
 
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
@@ -339,55 +343,119 @@ draw_bold_text_with_bright_colors: true
 #      white:   '#ECEFF4'
 
 
-# Colors (Nord, extended custom)
+# # Colors (Nord, extended custom)
+# colors:
+#   primary:
+#     background: '#1d2129'
+#     foreground: '#d8dee9'
+#     dim_foreground: '#a5abb6'
+#   cursor:
+#     text: '#2e3440'
+#     cursor: '#d8dee9'
+#   vi_mode_cursor:
+#     text: '#2e3440'
+#     cursor: '#d8dee9'
+#   selection:
+#     text: CellForeground
+#     background: '#4c566a'
+#   search:
+#     matches:
+#       foreground: CellBackground
+#       background: '#88c0d0'
+#     bar:
+#       background: '#434c5e'
+#       foreground: '#d8dee9'
+#   normal:
+#     black: '#3b4252'
+#     red: '#bf616a'
+#     green: '#a3be8c'
+#     yellow: '#ebcb8b'
+#     blue: '#81a1c1'
+#     magenta: '#b48ead'
+#     cyan: '#88c0d0'
+#     white: '#e5e9f0'
+#   bright:
+#     black: '#4c566a'
+#     red: '#bf616a'
+#     green: '#a3be8c'
+#     yellow: '#ebcb8b'
+#     blue: '#81a1c1'
+#     magenta: '#b48ead'
+#     cyan: '#8fbcbb'
+#     white: '#eceff4'
+#   dim:
+#     black: '#373e4d'
+#     red: '#94545d'
+#     green: '#809575'
+#     yellow: '#b29e75'
+#     blue: '#68809a'
+#     magenta: '#8c738c'
+#     cyan: '#6d96a5'
+#     white: '#aeb3bb'
+
+
+
+# Dracula theme for Alacritty
+# https://draculatheme.com/alacritty
+#
+# Color palette
+# https://spec.draculatheme.com
+#
+# Template
+# https://github.com/alacritty/alacritty/blob/master/alacritty.yml
+
 colors:
   primary:
-    background: '#1d2129'
-    foreground: '#d8dee9'
-    dim_foreground: '#a5abb6'
+    background: '#282a36'
+    foreground: '#f8f8f2'
+    bright_foreground: '#ffffff'
   cursor:
-    text: '#2e3440'
-    cursor: '#d8dee9'
+    text: CellBackground
+    cursor: CellForeground
   vi_mode_cursor:
-    text: '#2e3440'
-    cursor: '#d8dee9'
-  selection:
-    text: CellForeground
-    background: '#4c566a'
+    text: CellBackground
+    cursor: CellForeground
   search:
     matches:
-      foreground: CellBackground
-      background: '#88c0d0'
+      foreground: '#44475a'
+      background: '#50fa7b'
+    focused_match:
+      foreground: '#44475a'
+      background: '#ffb86c'
     bar:
-      background: '#434c5e'
-      foreground: '#d8dee9'
+      background: '#282a36'
+      foreground: '#f8f8f2'
+  hints:
+    start:
+      foreground: '#282a36'
+      background: '#f1fa8c'
+    end:
+      foreground: '#f1fa8c'
+      background: '#282a36'
+  line_indicator:
+    foreground: None
+    background: None
+  selection:
+    text: CellForeground
+    background: '#44475a'
   normal:
-    black: '#3b4252'
-    red: '#bf616a'
-    green: '#a3be8c'
-    yellow: '#ebcb8b'
-    blue: '#81a1c1'
-    magenta: '#b48ead'
-    cyan: '#88c0d0'
-    white: '#e5e9f0'
+    black: '#21222c'
+    red: '#ff5555'
+    green: '#50fa7b'
+    yellow: '#f1fa8c'
+    blue: '#bd93f9'
+    magenta: '#ff79c6'
+    cyan: '#8be9fd'
+    white: '#f8f8f2'
   bright:
-    black: '#4c566a'
-    red: '#bf616a'
-    green: '#a3be8c'
-    yellow: '#ebcb8b'
-    blue: '#81a1c1'
-    magenta: '#b48ead'
-    cyan: '#8fbcbb'
-    white: '#eceff4'
-  dim:
-    black: '#373e4d'
-    red: '#94545d'
-    green: '#809575'
-    yellow: '#b29e75'
-    blue: '#68809a'
-    magenta: '#8c738c'
-    cyan: '#6d96a5'
-    white: '#aeb3bb'
+    black: '#6272a4'
+    red: '#ff6e6e'
+    green: '#69ff94'
+    yellow: '#ffffa5'
+    blue: '#d6acff'
+    magenta: '#ff92df'
+    cyan: '#a4ffff'
+    white: '#ffffff'
 
 
 # Bell
@@ -435,7 +503,7 @@ bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.98
+# background_opacity: 0.98
 
 #selection:
   # This string contains all characters that are used as separators for
