--- a/systemd/user/restic-backup.service
+++ b/systemd/user/restic-backup.service
@@ -1,8 +1,9 @@
 [Unit]
 Description=Restic backup service
+ConditionACPower=true
 
 [Service]
 Type=oneshot
 ExecStart=restic backup --verbose --tag systemd.timer $BACKUP_EXCLUDES $BACKUP_PATHS
-ExecStartPost=restic forget --verbose --tag systemd.timer --group-by "paths,tags" --keep-daily $RETENTION_DAYS --keep-weekly $RETENTION_WEEKS --keep-monthly $RETENTION_MONTHS --keep-yearly $RETENTION_YEARS
+; ExecStartPost=restic forget --verbose --tag systemd.timer --group-by "paths,tags" --keep-daily $RETENTION_DAYS --keep-weekly $RETENTION_WEEKS --keep-monthly $RETENTION_MONTHS --keep-yearly $RETENTION_YEARS
 EnvironmentFile=%h/.config/restic-backup.conf
