--- a/waybar/config
+++ b/waybar/config
@@ -1,129 +1,72 @@
 // vim:ft=json
 
 {
-	"layer": "bottom",
-	"position": "top",
+  "modules-left": ["wlr/workspaces", "sway/mode"],
+  "modules-center": ["clock", "idle_inhibitor"],
+  /* "modules-right": ["tray", "custom/scratchpad-indicator", "pulseaudio", "custom/power"], */
+  "modules-right": [
+    "tray",
+    "custom/scratchpad-indicator",
+    "pulseaudio",
+    "custom/power"
+  ],
 
-	"modules-left": [
-		"custom/updates",
-		"custom/right-arrow-dark",
-		"custom/right-arrow-light",
-		"sway/workspaces",
-		"custom/right-arrow-dark"
-	],
-	"modules-center": [
-		"custom/left-arrow-dark",
-		"clock#1",
-		"clock#3",
-		"clock#2",
-		"custom/right-arrow-dark"
-	],
-	"modules-right": [
-		"custom/left-arrow-dark",
-		"cpu",
-		"custom/left-arrow-light",
-		"custom/left-arrow-dark",
-		"memory",
-		"custom/left-arrow-light",
-		"custom/left-arrow-dark",
-		"disk",
-		"custom/left-arrow-light",
-		"custom/left-arrow-dark",
-		"battery",
-		"custom/left-arrow-light",
-		"custom/left-arrow-dark",
-		"pulseaudio",
-		"custom/left-arrow-light",
-		"custom/left-arrow-dark",
-		"tray"
-	],
-
-	"custom/left-arrow-dark": {
-		"format": "",
-		"tooltip": false
-	},
-	"custom/left-arrow-light": {
-		"format": "",
-		"tooltip": false
-	},
-	"custom/right-arrow-dark": {
-		"format": "",
-		"tooltip": false
-	},
-	"custom/right-arrow-light": {
-		"format": "",
-		"tooltip": false
-	},
-	"custom/updates": {
-		"format": "{icon}",
-		"return-type": "json",
-		"format-icons": [ "☑️", "🔼" ],
-        "interval": 3600,
-        "exec": "$HOME/bin/bashscripts/module-update 2> /dev/null"
-	},
-
-	"sway/workspaces": {
-		"disable-scroll": false,
-		"format": "{name}"
-	},
-
-	"clock#1": {
-		"format": "{:%a}",
-		"tooltip": false
-	},
-	"clock#2": {
-		"format": "{:%I:%M}",
-		"tooltip": false
-	},
-	"clock#3": {
-		"format": "{:%m-%d}",
-		"tooltip": false
-	},
-
-	"disk": {
-		"interval": 100,
-		"format": "💽 {percentage_used}%"
-	},
-	"memory": {
-		"interval": 5,
-		"format": "🐏 {}%"
-	},
-	"cpu": {
-		"interval": 5,
-		"format": "💻 {usage:2}%"
-	},
-	"battery": {
-		"states": {
-			"good": 95,
-			"warning": 50,
-			"critical": 20
-		},
-		"format": "{icon} {capacity}%",
-		"format-icons": [
-			"⚡!",
-			"!",
-			"🔋",
-			"🔋",
-			"charged"
-		]
-	},
-	"pulseaudio": {
-		"format": "{icon} {volume:2}%",
-		"format-bluetooth": "{icon}  {volume}%",
-		"format-muted": "MUTE",
-		"format-icons": {
-			"headphones": "🎧",
-			"default": [
-				"🔉",
-				"🔊"
-			]
-		},
-		"scroll-step": 5,
-		"on-click": "pamixer -t",
-		"on-click-right": "pavucontrol"
-	},
-	"tray": {
-		"icon-size": 9
-	}
+  "sway/mode": {
+    "format": "<span style=\"italic\">{}</span>"
+  },
+  "network": {
+    "format-wifi": "{essid} ({signalStrength}%) ",
+    "format-ethernet": "{ifname} ",
+    "format-disconnected": "",
+    "max-length": 50,
+    "on-click": "kitty -e 'nmtui'"
+  },
+  "idle_inhibitor": {
+    "format": "{icon}",
+    "format-icons": {
+      "activated": "",
+      "deactivated": ""
+    },
+    "on-click": "toggleRemote"
+  },
+  "tray": {
+    "icon-size": 15,
+    "spacing": 10
+  },
+  "clock": {
+    // "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+    // "format-alt": "{:%Y-%m-%d}"
+    "on-click": "gnome-calendar"
+  },
+  "pulseaudio": {
+    "format": "{volume}% {icon} ",
+    "format-bluetooth": "{volume}% {icon} {format_source}",
+    "format-bluetooth-muted": " {icon} {format_source}",
+    "format-muted": "0% {icon} ",
+    "format-source": "{volume}% ",
+    "format-source-muted": "",
+    "format-icons": {
+      "headphone": "",
+      "hands-free": "",
+      "headset": "",
+      "phone": "",
+      "portable": "",
+      "car": "",
+      "default": ["", "", ""]
+    },
+    "on-click": "pavucontrol"
+  },
+  "custom/power": {
+    "format": " ",
+    "on-click": "swaynag -t warning -m 'Power Menu Options' -b 'Logout' 'swaymsg exit' -b 'Restart' 'shutdown -r now' -b 'Shutdown'  'shutdown -h now' --background=#005566 --button-background=#009999 --button-border=#002b33 --border-bottom=#002b33"
+  },
+  "custom/scratchpad-indicator": {
+    "format-text": "{}",
+    "return-type": "json",
+    "interval": 3,
+    "exec": "~/.local/bin/scratchpad-indicator 2> /dev/null",
+    "exec-if": "exit 0",
+    "on-click": "swaymsg 'scratchpad show'",
+    "on-click-right": "swaymsg 'move scratchpad'"
+  }
 }
-
