--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -52,6 +52,7 @@ set -g @tpm_plugins '\
     tmux-plugins/tmux-yank \
     christoomey/vim-tmux-navigator \
     tmux-plugins/tmux-resurrect \
+    tmux-plugins/tmux-continuum \
 '
 
 # Resurrect options
