--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -59,5 +59,7 @@ set -g @tpm_plugins '\
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
 
+set -g @continuum-restore 'on'
+
 # TMUX plugin manager (keep at the bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
