--- a/sway/config
+++ b/sway/config
@@ -31,7 +31,8 @@ set $menu wofi_path | wofi --allow-images --show run
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 #output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
-output * bg /home/liam/Pictures/Wallpapers/custom.png fill
+# output * bg /home/liam/Pictures/Wallpapers/custom.png fill
+output * bg /home/liam/Pictures/Wallpapers/Firefox_wallpaper.png fill
 output eDP-1 scale 2
 #
 # Example configuration:
